# archivis

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  Justfile  LICENSE  README.md  THIRD_PARTY_LICENSES.md  cliff.toml  deny.toml  docker-compose.dev.yml  docker-compose.yml  rust-toolchain.toml
.docs/: PROGRESS.md
.githooks/: pre-push
crates/archivis-api/: Cargo.toml
crates/archivis-api/src/: errors.rs  lib.rs  state.rs
crates/archivis-api/src/auth/: extractors.rs  handlers.rs  mod.rs  types.rs
crates/archivis-api/src/authors/: handlers.rs  mod.rs  types.rs
crates/archivis-api/src/books/: handlers.rs  mod.rs  scope.rs  types.rs
crates/archivis-api/src/duplicates/: handlers.rs  mod.rs  types.rs
crates/archivis-api/src/filesystem/: handlers.rs  mod.rs  types.rs
crates/archivis-api/src/health/: handlers.rs  mod.rs  types.rs
crates/archivis-api/src/identify/: handlers.rs  mod.rs  types.rs
crates/archivis-api/src/import/: handlers.rs  mod.rs  types.rs
crates/archivis-api/src/isbn_scan/: handlers.rs  mod.rs  types.rs
crates/archivis-api/src/kobo/: device_handlers.rs  extractor.rs  mod.rs  protocol_handlers.rs  selection_handlers.rs  sync_protocol.rs  tests.rs  types.rs
crates/archivis-api/src/metadata_rules/: handlers.rs  mod.rs  types.rs
crates/archivis-api/src/publishers/: handlers.rs  mod.rs  types.rs
crates/archivis-api/src/reader/: handlers.rs  mod.rs  types.rs
crates/archivis-api/src/resolve/: handlers.rs  types.rs
crates/archivis-api/src/series/: handlers.rs  mod.rs  types.rs
crates/archivis-api/src/settings/: handlers.rs  mod.rs  normalize.rs  registry.rs  service.rs  types.rs
crates/archivis-api/src/stats/: handlers.rs  mod.rs  types.rs
crates/archivis-api/src/tags/: handlers.rs  mod.rs  types.rs
crates/archivis-api/src/tasks/: handlers.rs  mod.rs  sse.rs  types.rs
crates/archivis-api/src/ui/: handlers.rs  mod.rs  types.rs
crates/archivis-api/src/users/: handlers.rs  mod.rs  types.rs
crates/archivis-api/src/watcher/: handlers.rs  mod.rs  types.rs
crates/archivis-auth/: Cargo.toml
crates/archivis-auth/src/: adapter.rs  lib.rs  local.rs  proxy.rs  service.rs
crates/archivis-core/: Cargo.toml
crates/archivis-core/src/: errors.rs  isbn.rs  language.rs  lib.rs  public_url.rs  scoring.rs  search_query.rs  settings.rs
crates/archivis-core/src/models/: author.rs  book.rs  book_file.rs  bulk.rs  candidate.rs  duplicate.rs  enums.rs  filter.rs  identifier.rs  kobo.rs  metadata_rule.rs  mod.rs  publisher.rs  reading_progress.rs  resolution_run.rs  series.rs  tag.rs  task.rs  user.rs  watched_directory.rs
crates/archivis-core/src/settings/: mod.rs  registry.rs  source.rs  store.rs  validation.rs  value.rs
crates/archivis-db/: Cargo.toml
crates/archivis-db/migrations/: 001_initial_schema.sql  002_metadata_rules.sql  002_tasks.sql  003_auth.sql  003_review_baseline.sql  004_baseline_resolution_outcome.sql  004_identification.sql  005_duplicate_links.sql  005_flatten_task_hierarchy.sql  006_metadata_quality_score.sql  006_task_hierarchy.sql  007_metadata_user_trusted.sql  007_settings.sql  008_reading_progress.sql  008_search_indexes_fts_v2.sql  009_format_version.sql  009_missing_indexes.sql  010_fts_tokenchars.sql  010_watched_directories.sql  011_duplicate_self_link_check.sql  011_kobo_sync.sql  012_norm_title.sql  013_subtitle.sql  014_resolution_foundations.sql  015_ingest_quality_score.sql  016_resolution_cleanup.sql  017_candidate_tier.sql  018_candidate_apply_changeset.sql
crates/archivis-db/src/: lib.rs  pool.rs
crates/archivis-db/src/repositories/: author.rs  book.rs  book_file.rs  bookmark.rs  candidate.rs  duplicate.rs  identifier.rs  kobo.rs  metadata_rule.rs  mod.rs  publisher.rs  reading_progress.rs  resolution_run.rs  search_resolve.rs  series.rs  session.rs  setting.rs  stats.rs  tag.rs  task.rs  types.rs  user.rs  watched_directory.rs
crates/archivis-db/tests/: repositories.rs
crates/archivis-formats/: Cargo.toml
crates/archivis-formats/src/: authors.rs  content_text.rs  detect.rs  epub.rs  filename.rs  isbn_scan.rs  lib.rs  mobi.rs  pdf.rs  sanitize.rs  scoring.rs  similarity.rs  transform.rs
crates/archivis-formats/tests/: detection.rs
crates/archivis-kepub/: Cargo.toml
crates/archivis-kepub/src/: assets.rs  container.rs  content.rs  lib.rs  opf.rs  pipeline.rs  spans.rs
crates/archivis-kepub/src/assets/: kobo.js
crates/archivis-kepub/tests/: conversion.rs
crates/archivis-metadata/: Cargo.toml
crates/archivis-metadata/src/: client.rs  errors.rs  lib.rs  provider.rs  provider_names.rs  registry.rs  resolver.rs  similarity.rs  types.rs
crates/archivis-metadata/src/providers/: hardcover.rs  loc.rs  mod.rs  open_library.rs
crates/archivis-server/: Cargo.toml  build.rs
crates/archivis-server/src/: config.rs  main.rs  telemetry.rs
crates/archivis-storage/: Cargo.toml
crates/archivis-storage/src/: backend.rs  lib.rs  local.rs  path.rs
crates/archivis-storage/src/watcher/: fs_detect.rs  mod.rs  service.rs
crates/archivis-storage/tests/: watcher_integration.rs
crates/archivis-tasks/: Cargo.toml
crates/archivis-tasks/src/: lib.rs  maintenance.rs
crates/archivis-tasks/src/identify/: mod.rs  service.rs
crates/archivis-tasks/src/import/: bulk.rs  cover.rs  mod.rs  progress.rs  service.rs  types.rs
crates/archivis-tasks/src/isbn_scan/: mod.rs  service.rs
crates/archivis-tasks/src/merge/: mod.rs  service.rs  types.rs
crates/archivis-tasks/src/queue/: cancellation.rs  mod.rs  worker.rs
crates/archivis-tasks/src/resolve/: mod.rs  planner.rs  quality.rs  service.rs  state.rs
crates/archivis-tasks/src/workers/: bulk_worker.rs  identify_worker.rs  import_worker.rs  isbn_scan_worker.rs  mod.rs  resolve_worker.rs  watcher_processor.rs
crates/archivis-tasks/tests/: bulk_import_test.rs  identify_cover_test.rs  identify_regression_test.rs  import_test.rs  merge_test.rs  quality_score_test.rs  resolve_cover_test.rs  resolve_regression_test.rs
docs/: index.md  package-lock.json  package.json
(+576 files in other folders)
