[workspace]
members = [
    "crates/archivis-core",
    "crates/archivis-db",
    "crates/archivis-formats",
    "crates/archivis-metadata",
    "crates/archivis-tasks",
    "crates/archivis-storage",
    "crates/archivis-auth",
    "crates/archivis-api",
    "crates/archivis-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/geekifier/archivis"
rust-version = "1.87"

[workspace.dependencies]
# Internal crates
archivis-core = { path = "crates/archivis-core", version = "0.1.0" }
archivis-db = { path = "crates/archivis-db", version = "0.1.0" }
archivis-formats = { path = "crates/archivis-formats", version = "0.1.0" }
archivis-metadata = { path = "crates/archivis-metadata", version = "0.1.0" }
archivis-tasks = { path = "crates/archivis-tasks", version = "0.1.0" }
archivis-storage = { path = "crates/archivis-storage", version = "0.1.0" }
archivis-auth = { path = "crates/archivis-auth", version = "0.1.0" }
archivis-api = { path = "crates/archivis-api", version = "0.1.0" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
    "chrono",
    "uuid",
] }

# Error handling
thiserror = "2"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
] }

# CLI and config
clap = { version = "4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }

# Auth
argon2 = "0.5"
rand = "0.8"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Cryptography
sha2 = "0.10"

# MOBI/AZW3 parsing
mobi-book = { git = "https://github.com/geekifier/mobi-book", version = "0.1.0" }

# Image processing — only enable codecs we actually use (decode: jpeg/png/gif/webp, encode: webp)
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "gif",
    "webp",
] }

# SVG rasterization for cover thumbnails
resvg = "0.47"

# IP network parsing (CIDR)
ipnet = "2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "gzip",
] }
async-trait = "0.1"
url = "2"
futures = "0.3"

# XML parsing
quick-xml = "0.37"

# Regex
regex = "1"

# Language detection
whatlang = "0.16"

# Language normalization (ISO 639)
isolang = { version = "2.4", features = ["english_names", "lowercase_names"] }

# Filesystem watching
notify = "8.2"
notify-debouncer-full = "0.7"

# Testing
tempfile = "3"
wiremock = "0.6"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pedantic overrides — these are too noisy for real code
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"

[profile.dev.package."*"]
opt-level = 1
