[package]
name = "archivis-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
archivis-auth.workspace = true
archivis-core.workspace = true
archivis-db.workspace = true
archivis-formats.workspace = true
archivis-storage.workspace = true
archivis-tasks.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
http = "1"
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
