[package]
name = "archivis-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
archivis-core = { workspace = true }
archivis-db = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
ipnet = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
