[package]
name = "archivis-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
