[package]
name = "archivis-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
archivis-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml.workspace = true
lopdf = "0.34"
mobi-book.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
