[package]
name = "archivis-kepub"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
archivis-core.workspace = true
archivis-formats.workspace = true
quick-xml.workspace = true
tracing.workspace = true
zip.workspace = true

[dev-dependencies]
zip.workspace = true

[lints]
workspace = true
