[package]
name = "archivis-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "archivis"
path = "src/main.rs"

[dependencies]
archivis-api.workspace = true
archivis-auth.workspace = true
archivis-core.workspace = true
archivis-db.workspace = true
archivis-formats.workspace = true
archivis-kepub.workspace = true
archivis-metadata.workspace = true
archivis-storage.workspace = true
archivis-tasks.workspace = true
axum.workspace = true
clap = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
rand.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror.workspace = true
