[package]
name = "archivis-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
archivis-core = { workspace = true }
chrono = { workspace = true }
sanitise-file-name = "1.0.0"
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
