[package]
name = "archivis-tasks"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
archivis-core = { workspace = true }
archivis-db = { workspace = true }
archivis-formats = { workspace = true }
archivis-storage = { workspace = true }
chrono = { workspace = true }
image = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
